--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Slate UI",
   "scripts": {
-    "start": "node build/app/app.js",
-    "build": "python dev/slate_build_dev.py"
+    "prep": "npm install -ci && cd build/app && npm install -ci",
+    "build": "python dev/slate_dev.py"
   },
   "author": "Syntavian",
   "license": "MIT",
@@ -13,8 +13,5 @@
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "jest": "^27.4.7"
-  },
-  "dependencies": {
-    "express": "^4.17.2"
   }
 }
