--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "sass": "^1.49.8"
   }
 }
