setup python testing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Slate UI",
   "scripts": {
     "prep": "npm install -ci && cd build/app && npm install -ci",
-    "build": "python dev/slate_dev.py"
+    "build": "python dev/slate_dev.py",
+    "test-py": "cd dev && python -m pytest python/"
   },
   "author": "Syntavian",
   "license": "MIT",
