--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.16.11",
     "browserify": "^17.0.0",
     "jest": "^27.4.7",
+    "prettier": "^2.5.1",
     "sass": "^1.49.8"
   }
 }
