--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prep": "npm install -ci && cd build/app && npm install -ci",
     "build": "python dev/slate_dev.py",
-    "build-css": "npx sass dev/scss:dev/css",
+    "build-css": "npx sass dev/scss:dev/css --style compressed",
     "test-py": "cd dev && python -m pytest python/",
     "test-js": "jest"
   },
