--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,7 @@
 {
   "presets": ["@babel/preset-env"],
-  "sourceType": "unambiguous"
+  "sourceType": "unambiguous",
+  "ignore": [
+    "**/*.test.js"
+  ]
 }
